--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -234,8 +234,8 @@
 	                      <th width="8%">城市</th>
 	                      <th width="10%">门店名称</th>
 	                      <th width="10%">门店编号</th>
-	                      <th width="12%">开卡数</th>
-	                      <th width="12%">累计开卡数</th>
+	                      <th width="12%">新增社员数</th>
+	                      <th width="12%">成累计社员总数</th>
 	                    </tr>
                     </tbody>
                   </table>
