门店添加街道管理功能

--- a/WebContent/data_access/store_list.html
+++ b/WebContent/data_access/store_list.html
@@ -239,7 +239,7 @@ function isStoreend(store_id){
 								town_name=town_name.substring(0,town_name.length-1);
 								if(place_town_id_parent==null||place_town_id_parent==undefined||place_town_id_parent==''){
 									flagss=false;
-									alert("请去门店编辑页面维护当前门店所在街道！");
+									alert("请去门店信息编辑页面,维护门店位置所在街道！");
 									return ;
 								} if(stt.search(place_town_id_parent)==-1){
 									flagss=false;
