--- a/WebContent/crm/eshopPurchaseBaseInfo.html
+++ b/WebContent/crm/eshopPurchaseBaseInfo.html
@@ -84,29 +84,19 @@
 <div class="wrapper">
 
   <header class="main-header">
-    <!-- Logo -->
-
-    <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
-      <!-- Sidebar toggle button-->
       <div class="container">
-
-        <div class="pull-left">
-           <nav class="navbar navbar-static-top no-margin">
-            <!-- Sidebar toggle button-->
-
-            <div class="logo-lg clearfix">
-              <div class="logo-lg clearfix">
-	            <ul>
-	              <li><a href="javascript:parent.location.reload();" class="h2"> <img src="dist/img/logo.png"> </a></li>
-	              <li class="nav-mark"><a href="#">企业购E店维护基础数据</a> </li>
-	              <li><!-- <a href="user.html#user">片区信息</a> --> </li>
-	              <li></li>
-	            </ul>
-	          </div>
-            </div>
-          </nav>
-        </div>
+					<div class="logo_img pull-left">
+						<img src="dist/img/logo.png" height="30">
+						<img src="dist/img/title.png" height="20">
+					</div>
+					<div class="pull-left">
+						<div class="logo-lg">
+							<ul class="no-margin">
+								<li class="current"><em>企业购E店维护基础数据</em></li>
+							</ul>
+						</div>
+					</div>
       </div>
     </nav>
   </header>
