--- a/WebContent/data_access/select_view/select_town_manager_checked.html
+++ b/WebContent/data_access/select_view/select_town_manager_checked.html
@@ -56,6 +56,7 @@
                         },false);
                     }
                 }
+                parent.parent_arr=arr;
             }
             searchList();
         });
