修改统计数据

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -223,7 +223,7 @@ var employeeId = decode64(getUrlParamByKey("e"));//员工编号/id
 	      }
 	    },
 	    legend: {
-	      data: ['累计社员人数', '新增社员人数'],
+	      data: [ '新增社员人数','累计社员人数'],
 	      right:0,
 	      textStyle: {color: '#404a59'}
 	    },
@@ -352,7 +352,7 @@ var employeeId = decode64(getUrlParamByKey("e"));//员工编号/id
 
 	      labelLine: {
 	        normal: {
-	          show: false
+	          show: true
 	        }
 	      },
 	      itemStyle: {
