--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -249,11 +249,11 @@ var employeeId = decode64(getUrlParamByKey("e"));//员工编号/id
 		      splitLine: {show: false},
 	        axisLabel: {
 	          formatter: '{value}',
-	          textStyle:{color:'#404a59',}
+	          textStyle:{color:'#404a59'}
 	        },
 	        axisLine:{
-	          lineStyle:{color:'#404a59',}
-	        },
+	          lineStyle:{color:'#404a59'}
+	        }
 	      },{
 	    	  type: 'value',
 	    	  name: '累计社员人数',
