--- a/WebContent/crm/user_member_view.html
+++ b/WebContent/crm/user_member_view.html
@@ -157,7 +157,7 @@
       <section class="content-header">
         <div class="box box-default">
           <div class="box-header h4 text-light-blue">
-          	<div class="pull-left "><strong>社员查询</strong></div>
+          	<div class="pull-left "><strong>合作社社员统计</strong></div>
           </div>
           <div class="box-body">
             <form id="searchform" class="clearfix">
