--- a/WebContent/crm/searchData_view.html
+++ b/WebContent/crm/searchData_view.html
@@ -260,13 +260,13 @@
 	                  <div class="pull-left search-title">事业群：</div>
 	                  <div class="search-con">
 	                    <div class="sl-v-list">
-	                      <a onclick="deptSelection('家务事')" style="cursor:pointer;">家务事事业部</a>
-	                      <a onclick="deptSelection('老年之家')" style="cursor:pointer;">老年之家事业部</a>
-	                      <a onclick="deptSelection('国安优易')" style="cursor:pointer;">国安优易事业部</a>
-	                      <a onclick="deptSelection('公共')" style="cursor:pointer;">公共事业部</a>
-	                      <a onclick="deptSelection('商业创新')" style="cursor:pointer;">商业创新事业部</a>
-	                      <a onclick="deptSelection('旅游')" style="cursor:pointer;">旅游事业部</a>
-	                      <a onclick="deptSelection('健康')" style="cursor:pointer;">健康事业部</a>
+	                      <a onclick="deptSelection('家务事')" style="cursor:pointer;">家务事</a>
+	                      <a onclick="deptSelection('老年之家')" style="cursor:pointer;">老年之家</a>
+	                      <a onclick="deptSelection('国安优易')" style="cursor:pointer;">国安优易</a>
+	                      <a onclick="deptSelection('公共')" style="cursor:pointer;">公共</a>
+	                      <a onclick="deptSelection('商业创新')" style="cursor:pointer;">商业创新</a>
+	                      <a onclick="deptSelection('旅游')" style="cursor:pointer;">旅游</a>
+	                      <a onclick="deptSelection('健康')" style="cursor:pointer;">健康</a>
 	                    </div>
 	                  </div>
 	                 </div>
