修改社员户籍标题名---出生地

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -518,7 +518,7 @@ var employeeId = decode64(getUrlParamByKey("e"));//员工编号/id
 	  //地区
 	option5 = {
 			title: [{
-			      text: '社员户籍分布',
+			      text: '出生地分布',
 			      left: '45%',
 			      top: '2%',
 			      textAlign: 'center',
