营业额统计范围(签收时间)

--- a/WebContent/crm/turnoverStat_view.html
+++ b/WebContent/crm/turnoverStat_view.html
@@ -181,7 +181,7 @@
 		              	<div class="box-body">
 				          	<div class="clearfix search-criteria">
 				            	<div class="selectorLine clearfix no-border">
-				            	<div class="search-title">统计范围：</div>
+				            	<div class="search-title pull-left">统计范围：</br>（签收时间）</div>
 				            	<div class="search-con" style="overflow:visible;">
 				            	<div class="sl-v-list">
 				            	<div class="clearfix">
@@ -242,7 +242,7 @@
 		                	<div class="box-body">
 				          	<div class="clearfix search-criteria">
 				            	<div class="selectorLine clearfix no-border">
-				            	<div class="search-title">统计范围：</div>
+				            	<div class="search-title">统计范围：</br>（签收时间）</div>
 				            	<div class="search-con" style="overflow:visible;">
 				            	<div class="sl-v-list">
 				            	<div class="clearfix">
@@ -305,7 +305,7 @@
 		                <div class="box-body">
 				          	<div class="clearfix search-criteria">
 				            	<div class="selectorLine clearfix no-border">
-				            	<div class="search-title">统计范围：</div>
+				            	<div class="search-title">统计范围：</br>（签收时间）</div>
 				            	<div class="search-con" style="overflow:visible;">
 				            	<div class="sl-v-list">
 				            	<div class="clearfix">
@@ -363,7 +363,7 @@
 				            <div class="box-body">
 				          	<div class="clearfix search-criteria">
 				            	<div class="selectorLine clearfix no-border">
-				            	<div class="search-title">统计范围：</div>
+				            	<div class="search-title">统计范围：</br>（签收时间）</div>
 				            	<div class="search-con" style="overflow:visible;">
 				            	<div class="sl-v-list">
 				            	<div class="clearfix">
@@ -421,7 +421,7 @@
 		                <div class="box-body">
 				          	<div class="clearfix search-criteria">
 				            	<div class="selectorLine clearfix no-border">
-				            	<div class="search-title">统计范围：</div>
+				            	<div class="search-title">统计范围：</br>（签收时间）</div>
 				            	<div class="search-con" style="overflow:visible;">
 				            	<div class="sl-v-list">
 				            	<div class="clearfix">
