营业指标改为经营指标

--- a/WebContent/crm/index_K.html
+++ b/WebContent/crm/index_K.html
@@ -1285,7 +1285,7 @@ Date.prototype.format = function() {
 			legend: {
 				x: '78%',
 				top: '1%',
-				data: ['月总数', '营业指标']
+				data: ['月总数', '经营指标']
 			},
 
 
@@ -1372,7 +1372,7 @@ Date.prototype.format = function() {
 				data:yData_month
 			},
 			{
-				name: "营业指标",
+				name: "经营指标",
 				type: "line",
 				symbolSize:10,
 				symbol:'circle',
