目标值录入加入前置仓目标值录入字段,后台和页面修改

--- a/WebContent/crm/office_network_list_add.html
+++ b/WebContent/crm/office_network_list_add.html
@@ -80,6 +80,13 @@
 				return;
 			}
 		}
+		var preposition_task = $("#preposition_task").val().replace(/(^\s*)|(\s*$)/g, "");
+		if(preposition_task!=""){
+			if(!isNumber(preposition_task)){
+				alert("前置仓任务目标必须为数字");
+				return;
+			}
+		}
 		var citySelect = $("#citySelect").val();
 		if(citySelect == null||citySelect == "0"){
 			alert("城市不能为空");
@@ -109,7 +116,7 @@
 	}
 	function doSave(){
 		var arr = [ "statistical_time_period", "survey_quantity","contract_quantity","through_quantity","self_support_task",
-		            "cooperative_task","cityname","start_time","end_time","cityno"];
+		            "cooperative_task","preposition_task","cityname","start_time","end_time","cityno"];
 			var o = {};
 			for ( var i in arr) {
 				var v = arr[i];
@@ -249,6 +256,10 @@
 			</td>
 		</tr>
 		<tr>
+			<td>
+				<p>前置仓任务目标：(2018年)</p>
+				<p><input type="text" onkeyup="value=value.replace(/[^\d.]/g,'')" name="preposition_task" id="preposition_task"/></p>
+			</td>
 			<td>
 				<p class="read">城市名称：<span style="color: red">*</span></p>
 				<p class="read"><select id="citySelect" style="width: 38%" onchange="select_data();"></select><input type="hidden" id="cityname" name="cityname"><input type="hidden" id="cityno" name="cityno"> </p>
