--- a/WebContent/crm/office_network_list_edit.html
+++ b/WebContent/crm/office_network_list_edit.html
@@ -142,6 +142,13 @@
 				return;
 			}
 		}
+		var preposition_task = $("#preposition_task").val().replace(/(^\s*)|(\s*$)/g, "");
+		if(preposition_task!=""){
+			if(!isNumber(preposition_task)){
+				alert("前置仓任务目标必须为数字");
+				return;
+			}
+		}
 		var citySelect = $("#citySelect").val();
 		if(citySelect == null||citySelect == "0"){
 			alert("城市不能为空");
@@ -152,7 +159,7 @@
 	
 	function doSave(){
 		var arr = [ "statistical_time_period", "survey_quantity","contract_quantity","through_quantity","self_support_task",
-		            "cooperative_task","cityname","start_time","end_time","cityno","id"];
+		            "cooperative_task","preposition_task","cityname","start_time","end_time","cityno","id"];
 			var o = {};
 			for ( var i in arr) {
 				var v = arr[i];
@@ -281,6 +288,10 @@
 			</td>
 		</tr>
 		<tr>
+			<td>
+				<p>前置仓任务目标：(2018年)</p>
+				<p><input type="text" onkeyup="value=value.replace(/[^\d.]/g,'')" name="preposition_task" id="preposition_task"/></p>
+			</td>
 			<td>
 				<p class="read">城市名称：<span style="color: red">*</span></p>
 				<p class="read"><select id="citySelect" style="width: 38%;background-color: #EEEEEE;" onchange="select_data();" disabled="disabled"></select><input type="hidden" id="cityname" name="cityname"><input type="hidden" id="cityno" name="cityno"> </p>
