--- a/WebContent/shortMessage/shortMessage_send.html
+++ b/WebContent/shortMessage/shortMessage_send.html
@@ -386,7 +386,7 @@ function isInArray(arr,value){
             <div class="panel-heading">
                 	基本信息
                 <span class="but">
-                    <input type="button" id="btnSave" onclick="doSave()" style="display:none" value="预览"/>
+                    <input type="button" id="btnSave" onclick="doSave()"  value="预览"/>
                     <input type="button" onclick="doBack();" value="返回"/>
                     
                 </span>
