--- a/WebContent/shortMessage/SMSUserGroup_add.html
+++ b/WebContent/shortMessage/SMSUserGroup_add.html
@@ -443,7 +443,7 @@ function getCode(){
             <div class="panel-heading">
                 	基本信息
                 <span class="but">
-                    <input type="button" id="btnSave" onclick="doSave()" style="display:none" value="保存"/>
+                    <input type="button" id="btnSave" onclick="doSave()"  value="保存"/>
                     <input type="button" onclick="doBack();" value="返回"/>
                     
                 </span>
