隐藏‘社员邀请统计’

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -107,7 +107,7 @@
                                         <dd class="col-sm-6"><a href="javascript:goToDeptConsumer()"><span class="fa fa-female"></span>事业群用户</a></dd>
                                         <dd class="col-sm-6"><a href="javascript:goToSendOrders()"><span class="fa fa-calendar-check-o"></span>国安侠送单量</a></dd>
                                         <dd class="col-sm-6"><a href="javascript:goToRewardtimes()"><span class="fa fa-thumbs-o-up"></span>国安侠好评次数</a></dd>
-                                        <dd class="col-sm-6"><a href="javascript:goToMemberInvitation()"><span class="fa fa-thumbs-o-up"></span>社员邀请统计</a></dd>
+<!--                                         <dd class="col-sm-6"><a href="javascript:goToMemberInvitation()"><span class="fa fa-thumbs-o-up"></span>社员邀请统计</a></dd> -->
                                     </dl>
                                     <dl class="pull-left">
                                         <dt><i></i>档案数据</dt>
