--- a/WebContent/crm/index_city_net.html
+++ b/WebContent/crm/index_city_net.html
@@ -494,7 +494,7 @@
               <tr>
                 <th colspan="2">已开业门店数量</th>
                 <th colspan="2">筹备中门店数量</th>
-                <th colspan="6">截止目前在职情况（截至2.26）</th>
+                <th colspan="6">截止目前在职情况</th>
                 <td rowspan="2">店均人数</td>
                 <td rowspan="2">入职人员</td>
                 <td rowspan="2">离职人员</td>
@@ -892,7 +892,7 @@
                   <td></td>
                 </tr>
                 <tr>
-                  <th>店均数量</th>
+                  <th>店均社区关键人数量</th>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -1370,7 +1370,7 @@
                 <td><input type="text" class="form-control"></td>
               </tr>
               <tr>
-                <th>店均数量</th>
+                <th>店均社区关键人数量</th>
                 <td><input type="text" class="form-control"></td>
                 <td><input type="text" class="form-control"></td>
                 <td><input type="text" class="form-control"></td>
